fixed z-index on splash page

--- a/app/assets/stylesheets/api/splash_page.scss
+++ b/app/assets/stylesheets/api/splash_page.scss
@@ -7,7 +7,7 @@
   // margin: 0 auto;
   // width: 960px;
   position: relative;
-  z-index: 2;
+  z-index: 5;
   
 }
 
